# aiohttp-cors

./: .gitignore  .jscs.json  .jshintrc  .pep8rc  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  conftest.py  install_python_and_pip.ps1  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yaml  codeql.yml
aiohttp_cors/: __about__.py  __init__.py  _log.py  abc.py  cors_config.py  mixin.py  preflight_handler.py  resource_options.py  urldispatcher_router_adapter.py
requirements/: common.txt  lint.txt  test.txt
src/aiohttp_cors/: __init__.py  router_adapter.py  urldispatcher_router_adapter.py
tests/: aio_test_base.py  test_init.py
tests/doc/: test_basic_usage.py
tests/integration/: test_main.py  test_page.html  test_real_browser.py
tests/unit/: test___about__.py  test_cors_config.py  test_mixin.py  test_preflight_handler.py  test_resource_options.py  test_urldispatcher_router_adapter.py
